<resources>
    <string name="app_name">Zolistic</string>
    <string name="razor_pay_api_key">rzp_test_VrDnQSLK68kCrS</string>
    <string name="razor_pay_secret_key">DkvSY7VbuOJdYcfAzdJtlk6I</string>
    <string name="notification_app_id">8fcfe614-07b6-48f4-b959-50d91606a101</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_quote_lbl">Make\nYour Self Fit</string>
    <string name="email_id_phone_number_lbl">Email ID / Phone Number</string>
    <string name="send_otp_lbl">Send OTP</string>
    <string name="resend_otp_lbl">Tap here to send OTP again</string>
    <string name="have_account_lbl">Don\'t have an account?</string>
    <string name="sign_up_lbl">Sign up</string>
    <string name="already_have_an_account_lbl">Already have an Account?</string>
    <string name="login_lbl">Login</string>
    <string name="register_lbl">Register</string>
    <string name="password_lbl">password</string>
    <string name="pincode_lbl">pincode</string>
    <string name="area_lbl">area</string>
    <string name="city_lbl">city</string>
    <string name="state_lbl">state</string>
    <string name="address_lbl">address</string>
    <string name="phone_lbl">phone</string>
    <string name="email_lbl">email</string>
    <string name="username_lbl">name</string>
    <string name="otp">OTP</string>
    <string name="verify_lbl">Verify</string>
    <string name="change_lbl">change</string>
    <string name="packages_lbl">Packages</string>
    <string name="filters_lbl">Filters</string>
    <string name="clear_filters_lbl">Clear Filters</string>
    <string name="apply_lbl">Apply</string>
    <string name="product_found_lbl">Product Found</string>
    <string name="filter_by_color_lbl">Filter By Color</string>
    <string name="filter_by_price_lbl">Filter By Price</string>
    <string name="filter_by_size_lbl">Filter By Size</string>
    <string name="categories_lbl">Categories</string>
    <string name="sort_lbl">Sort</string>
    <string name="popularity_lbl">Popularity</string>
    <string name="price_low_to_high_lbl">Price -- Low to High</string>
    <string name="price_high_to_low_lbl">Price -- High to Low</string>
    <string name="a_to_z">A - Z</string>
    <string name="z_to_a">Z - A</string>
    <string name="newest_first_lbl">Newest First</string>
    <string name="vendor_products_lbl">Service Partner</string>
    <string name="sub_category_lbl">Sub Category</string>
    <string name="vendor_lbl">Service Partner</string>
    <string name="organisation_lbl">Organisation</string>
    <string name="no_products_to_show_lbl">No Products to Show</string>
    <string name="no_packages_to_show_lbl">No Packages to Show</string>
    <string name="faq_lbl">FAQ</string>
    <string name="order_placed_lbl">Your Order has been placed Successfully</string>
    <string name="active_package_lbl">Check your order in Active Packages!</string>
    <string name="home_lbl">Home</string>
    <string name="active_packs_lbl">Active Packs</string>
    <string name="orders_history_lbl">Orders History</string>
    <string name="notifications_lbl">Notifications</string>
    <string name="category_lbl">Category</string>
</resources>