<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/sortLbl"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/sort_lbl"
        android:textSize="@dimen/_12sdp"
        android:layout_marginVertical="@dimen/_8sdp"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:fontFamily="@font/poppins_semibold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/divider"/>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="0.8dp"
        android:background="@color/grey_200"
        android:layout_marginTop="@dimen/_5sdp"
        app:layout_constraintTop_toBottomOf="@id/sortLbl"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>



    <RadioGroup
        android:id="@+id/sortRadioGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:paddingBottom="@dimen/_15sdp"
        android:layoutDirection="rtl"
        app:layout_constraintTop_toBottomOf="@id/divider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">


        <RadioButton
            android:id="@+id/sortByLowToHigh"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/a_to_z"
            android:fontFamily="@font/poppins_medium"/>

        <RadioButton
            android:id="@+id/sortByHighToLow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/z_to_a"
            android:fontFamily="@font/poppins_medium"/>


    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>