<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".OrderPlaced.OrderPlacedActivity">


    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/checkLogo"
        android:layout_width="@dimen/_120sdp"
        android:layout_height="@dimen/_120sdp"
        android:src="@drawable/ic_check"
        android:padding="@dimen/_25sdp"
        android:background="@color/themeOrange"
        app:roundPercent="1"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/orderPlacedLbl"
        />

    <TextView
        android:id="@+id/orderPlacedLbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order_placed_lbl"
        android:fontFamily="@font/poppins_medium"
        android:textSize="@dimen/_14sdp"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/_20sdp"
        app:layout_constraintTop_toBottomOf="@id/checkLogo"
        app:layout_constraintStart_toStartOf="@id/checkLogo"
        app:layout_constraintEnd_toEndOf="@id/checkLogo"
        app:layout_constraintBottom_toTopOf="@+id/activePackLbl"
        />

    <TextView
        android:id="@+id/activePackLbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/active_package_lbl"
        android:fontFamily="@font/poppins_medium"
        android:textSize="@dimen/_12sdp"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@id/orderPlacedLbl"
        app:layout_constraintStart_toStartOf="@id/checkLogo"
        app:layout_constraintEnd_toEndOf="@id/checkLogo"
        app:layout_constraintBottom_toTopOf="@+id/homeBtn"
        />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/homeBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_medium"
        android:textColor="@color/white"
        android:text="@string/home_lbl"
        android:textSize="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:backgroundTint="@color/themeOrange"
        app:cornerRadius="@dimen/_10sdp"
        android:layout_marginHorizontal="@dimen/_15sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activePackLbl"
        app:layout_constraintBottom_toBottomOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
