<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.productListing.PackageFilterFragment">

    <View
        android:id="@+id/appBarBg"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/black_bottom_corner_radius"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/backArrow"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:padding="@dimen/_5sdp"
        android:src="@drawable/ic_back_arrow"
        app:layout_constraintBottom_toBottomOf="@id/appBarBg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/appBarBg" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_12sdp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/filters_lbl"
        android:textColor="@color/white"
        android:textSize="@dimen/_14sdp"
        app:layout_constraintBottom_toBottomOf="@id/appBarBg"
        app:layout_constraintEnd_toEndOf="@id/appBarBg"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toEndOf="@+id/backArrow"
        app:layout_constraintTop_toTopOf="@id/appBarBg" />

    <TextView
        android:id="@+id/clearFilters"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_medium"
        android:paddingHorizontal="@dimen/_15sdp"
        android:paddingVertical="@dimen/_10sdp"
        android:text="@string/clear_filters_lbl"
        android:textColor="@color/white"
        android:textSize="@dimen/_11sdp"
        app:layout_constraintBottom_toBottomOf="@id/appBarBg"
        app:layout_constraintEnd_toEndOf="@id/appBarBg"
        app:layout_constraintTop_toTopOf="@id/appBarBg" />

    <View
        android:id="@+id/greyView"
        android:layout_width="@dimen/_120sdp"
        android:layout_height="0dp"
        android:background="@color/grey_300"
        app:layout_constraintTop_toBottomOf="@id/appBarBg"
        app:layout_constraintBottom_toTopOf="@+id/orangeView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/filterByCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/category_lbl"
        android:textColor="@color/black"
        android:textSize="@dimen/_12sdp"
        android:fontFamily="@font/poppins_medium"
        android:layout_marginTop="@dimen/_28sdp"
        app:layout_constraintStart_toStartOf="@id/greyView"
        app:layout_constraintEnd_toEndOf="@id/greyView"
        app:layout_constraintTop_toBottomOf="@id/appBarBg"
        />

    <TextView
        android:id="@+id/filterBySubCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sub_category_lbl"
        android:textColor="@color/black"
        android:textSize="@dimen/_12sdp"
        android:fontFamily="@font/poppins_medium"
        android:layout_marginTop="@dimen/_25sdp"
        app:layout_constraintStart_toStartOf="@id/filterByCategory"
        app:layout_constraintTop_toBottomOf="@id/filterByCategory"
        />

    <TextView
        android:visibility="gone"
        android:id="@+id/filterByOrganisation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/organisation_lbl"
        android:textColor="@color/black"
        android:textSize="@dimen/_12sdp"
        android:fontFamily="@font/poppins_medium"
        android:layout_marginTop="@dimen/_25sdp"
        app:layout_constraintStart_toStartOf="@id/filterBySubCategory"
        app:layout_constraintTop_toBottomOf="@id/filterBySubCategory"
        />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/filterCategoryRv"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:paddingTop="@dimen/_18sdp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/item_filter_selection"
        app:layout_constraintStart_toEndOf="@+id/greyView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appBarBg"
        app:layout_constraintBottom_toTopOf="@+id/orangeView"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/filterSubCategoryRv"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:paddingTop="@dimen/_18sdp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/item_filter_selection"
        app:layout_constraintStart_toEndOf="@+id/greyView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appBarBg"
        app:layout_constraintBottom_toTopOf="@+id/orangeView"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:visibility="gone"
        android:id="@+id/filterOrganisationRv"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:paddingTop="@dimen/_18sdp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/item_filter_selection"
        app:layout_constraintStart_toEndOf="@+id/greyView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appBarBg"
        app:layout_constraintBottom_toTopOf="@+id/orangeView"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:visibility="gone"
        android:id="@+id/filterVendorRv"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:paddingTop="@dimen/_18sdp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/item_filter_selection"
        app:layout_constraintStart_toEndOf="@+id/greyView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appBarBg"
        app:layout_constraintBottom_toTopOf="@+id/orangeView"
        />


    <View
        android:id="@+id/orangeView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:background="@color/themeOrange"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <TextView
        android:visibility="gone"
        android:id="@+id/packageCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:fontFamily="@font/poppins_semibold"
        android:text="1245"
        android:textColor="@color/white"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintBottom_toTopOf="@+id/productFoundLbl"
        app:layout_constraintEnd_toStartOf="@+id/applyFilerCV"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/orangeView"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:visibility="gone"
        android:id="@+id/productFoundLbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/product_found_lbl"
        android:textColor="@color/white"
        android:textSize="@dimen/_11sdp"
        app:layout_constraintBottom_toBottomOf="@id/orangeView"
        app:layout_constraintEnd_toStartOf="@+id/applyFilerCV"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/packageCount" />

    <androidx.cardview.widget.CardView
        android:id="@+id/applyFilerCV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/_10sdp"
        app:cardElevation="@dimen/_5sdp"
        app:layout_constraintBottom_toBottomOf="@id/orangeView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/orangeView">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:paddingHorizontal="@dimen/_35sdp"
            android:paddingVertical="@dimen/_8sdp"
            android:text="@string/apply_lbl"
            android:textColor="@color/black" />


    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>